--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile("org.springframework.boot:spring-boot-starter-data-jpa") //JPA
-    compile("com.h2database:h2")
-    compile("org.apache.commons:commons-lang3:3.0")
+	compile("org.springframework.boot:spring-boot-starter-data-jpa") 
 	testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile('org.easytesting:fest-assert:1.4')
-
         }
 
 test {
